--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,11 @@
-TELEGRAM_BOT_TOKEN=your_bot_token
-TELEGRAM_CHAT_ID=your_chat_id
+TELEGRAM_BOT_TOKEN=your-telegram-bot-token
+TELEGRAM_SECRET_TOKEN=your-telegram-secret
+PAPER_MODE=true
+LIVE=false
+TZ=UTC
+LOG_LEVEL=INFO
+WEBHOOK_RPS=1.0
+WEBHOOK_BURST=5
+PORT=8000
+DAILY_LOSS_LIMIT=1000
+DATA_DIR=/tmp/paper-ledgers
