--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
-requests
+fastapi==0.109.2
+uvicorn==0.27.1
+python-json-logger==2.0.7
+pydantic==1.10.14
+python-dateutil==2.8.2
+pytest==8.0.0
+httpx==0.26.0
