Update requirements.txt with full dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,24 @@
-requests
+# Core dependencies for the EGX intraday assistant
+fastapi==0.111.0
+uvicorn[standard]==0.29.0
+httpx==0.27.0
+requests==2.31.0
+
+# Data manipulation and time handling
+pandas==2.0.3
+numpy==1.24.4
+pyyaml==6.0.1
+pytz==2024.1
+
+# Optional: technical indicators, plotting and machine learning
+scikit-learn==1.4.2
+matplotlib==3.8.3
+mplfinance==0.12.10
+yfinance==0.2.37
+schedule==1.2.1
+
+# Telegram integration helper (used by requests/httpx)
+python-telegram-bot==13.15
+
+# Dotenv for local development (optional)
+python-dotenv==1.0.1
