--- a/src/egx_intraday_enhanced/requirements.txt
+++ b/src/egx_intraday_enhanced/requirements.txt
@@ -1,1 +1,24 @@
-requests
+# Core dependencies
+fastapi==0.111.0
+uvicorn[standard]==0.29.0
+httpx==0.27.0
+pandas==2.2.2
+numpy==1.26.4
+
+# Data & ML
+scikit-learn==1.5.0
+joblib==1.4.2
+xgboost==2.0.3
+
+# Telegram integration
+pytelegrambotapi==4.16.2
+
+# Environment & security
+python-dotenv==1.0.1
+python-multipart==0.0.9
+requests==2.31.0
+loguru==0.7.0
+
+# Optional extras
+matplotlib==3.9.0
+jupyter==1.0.0
